--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.6
   file_picker: ^1.4.3+2
   path_provider: ^1.5.1
+  webview_flutter: ^0.3.19+5
 
 dev_dependencies:
   flutter_test:
